@@ -198,7 +198,7 @@ def generate_rst(what, name, members, options, add_content, document, lineno,
     # first, parse the definition -- auto directives for classes and functions
     # can contain a signature which is then used instead of an autogenerated one
     try:
-        path, base, signature = py_sig_re.match(name).groups()
+        path, base, signature, retann = py_sig_re.match(name).groups()
     except:
         warning = document.reporter.warning(
             'invalid signature for auto%s (%r)' % (what, name), line=lineno)
@@ -290,6 +290,8 @@ def generate_rst(what, name, members, options, add_content, document, lineno,
     if signature is not None:
         # signature given explicitly -- the parentheses were stripped by the regex
         args = '(%s)' % signature
+        if retann:
+            args += retann
     else:
         try:
             args = format_signature(what, todoc)
